Initial implementation using libcouchbase
* extension layout
* create and connect bucket instance
* declare possible errors and define check function

Change-Id: I68621ae670deac2720b1ffe22a6ed391ed49ad14
Reviewed-on: http://review.couchbase.org/11929
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Matt Ingenthron <matt@couchbase.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 *.gem
+*.so
 .bundle
+.yardoc
 Gemfile.lock
+doc/
+ext/couchbase/Makefile
+ext/couchbase/mkmf.log
 pkg/*
+test/CouchbaseMock.jar
+tmp
