--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,6 @@
 before_install:
-  - sudo rm -rf /etc/apt/sources.list.d/couchdb-ppa-source.list
-  - sudo rm -rf /etc/apt/sources.list.d/mongodb.list
-  - sudo rm -rf /etc/apt/sources.list.d/datastax-source.list
-  - sudo rm -rf /etc/apt/sources.list.d/rabbitmq-source.list
-  - sudo rm -rf /etc/apt/sources.list.d/mapopa-source.list
-  - sudo rm -rf /etc/apt/sources.list.d/webupd8team-java-ppa-source.list
-  - sudo rm -rf /etc/apt/sources.list.d/maven3-ppa-source.list
   - wget -O- http://packages.couchbase.com/ubuntu/couchbase.key | sudo apt-key add -
-  - echo deb http://packages.couchbase.com/snapshot/ubuntu oneiric oneiric/main | sudo tee /etc/apt/sources.list.d/couchbase.list
+  - echo deb http://packages.couchbase.com/ubuntu lucid lucid/main | sudo tee /etc/apt/sources.list.d/couchbase.list
   - sudo apt-get update
   - sudo apt-get -y install libevent-dev libvbucket-dev libcouchbase-dev
 
@@ -16,7 +9,3 @@ rvm:
   - 1.9.2
   - 1.9.3
   - ree
-
-notifications:
-  email:
-    - sdk_dev@couchbase.com
