RCBC-205: Upgrade internal HTTP APIs
Change-Id: Ibcdab4f600211028d68b7bdce471e963c833203e
Reviewed-on: http://review.couchbase.org/98089
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,8 +24,8 @@ Style/HashSyntax:
 
 Style/Copyright:
   Enabled: true
-  Notice: 'Copyright:: .*2017 Couchbase, Inc.'
-  AutocorrectNotice: '# Copyright:: 2017 Couchbase, Inc.'
+  Notice: 'Copyright:: .*20\d{2} Couchbase, Inc.'
+  AutocorrectNotice: '# Copyright:: 20\d{2} Couchbase, Inc.'
 
 Style/MutableConstant:
   Enabled: false
@@ -56,3 +56,13 @@ Style/RescueModifier:
 
 Style/Lambda:
   EnforcedStyle: lambda
+
+Style/SymbolArray:
+  EnforcedStyle: brackets
+
+Style/WordArray:
+  EnforcedStyle: brackets
+
+Style/RegexpLiteral:
+  EnforcedStyle: mixed
+  AllowInnerSlashes: true
