fix url for asio submodule
Change-Id: If1f0a9ab8bd9ef470bf0041502f52f1a643243a0
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/128654
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = git://github.com/nodejs/http-parser.git
 [submodule "ext/third_party/asio"]
 	path = ext/third_party/asio
-	url = git@github.com:chriskohlhoff/asio.git
+	url = git://github.com/chriskohlhoff/asio.git
