ensure ruby headers selected from active ruby
Cmake might incorrectly detect Ruby headers sometimes
When we compile from extconf.rb, take location of the headers from the
current process and disable cmake lookup process.

Change-Id: I69d8a4795bc0556bdf719596632ef476f20b4daf
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/128667
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -99,10 +99,15 @@ add_library(
     couchbase/cbsasl/client.cc couchbase/cbsasl/context.cc couchbase/cbsasl/mechanism.cc
     couchbase/cbsasl/plain/plain.cc couchbase/cbsasl/scram-sha/scram-sha.cc couchbase/cbsasl/scram-sha/stringutils.cc)
 
-find_package(Ruby REQUIRED)
-message(STATUS "RUBY_VERSION: ${RUBY_VERSION}")
-message(STATUS "RUBY_EXECUTABLE: ${RUBY_EXECUTABLE}")
+if(RUBY_HDR_DIR)
+    set(RUBY_INCLUDE_DIR ${RUBY_HDR_DIR} ${RUBY_ARCH_HDR_DIR})
+else()
+    find_package(Ruby REQUIRED)
+    message(STATUS "RUBY_VERSION: ${RUBY_VERSION}")
+    message(STATUS "RUBY_EXECUTABLE: ${RUBY_EXECUTABLE}")
+endif()
 message(STATUS "RUBY_INCLUDE_DIR: ${RUBY_INCLUDE_DIR}")
+include_directories(BEFORE SYSTEM "${RUBY_INCLUDE_DIR}")
 
 add_library(couchbase SHARED couchbase/couchbase.cxx)
 target_link_libraries(
