fix extension of shared object on MacOS
Change-Id: I835baddd904e411db9c9b2b26256bf3b66984088
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/128689
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -121,8 +121,13 @@ target_link_libraries(
             cbsasl
             http_parser
             spdlog::spdlog_header_only)
+set_target_properties(cbcrypto cbsasl platform PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
-set_target_properties(cbcrypto cbsasl platform PROPERTIES CXX_VISIBILITY_PRESET hidden POSITION_INDEPENDENT_CODE TRUE)
+if(APPLE)
+    target_link_options(couchbase PRIVATE -Wl,-undefined,dynamic_lookup)
+else()
+    set_target_properties(cbcrypto cbsasl platform PROPERTIES CXX_VISIBILITY_PRESET hidden)
+endif()
 
 if(BUILD_EXAMPLES)
     add_executable(main test/main.cxx)
