--- a/ext/build_version.hxx.in
+++ b/ext/build_version.hxx.in
@@ -17,8 +17,10 @@
 
 #pragma once
 
-#define BACKEND_VERSION_MAJOR 0
-#define BACKEND_VERSION_MINOR 1
-#define BACKEND_VERSION_PATCH 0
+#define BACKEND_BUILD_TIMESTAMP "@BACKEND_BUILD_TIMESTAMP@"
+#define BACKEND_CXX_COMPILER "@CMAKE_CXX_COMPILER_ID@ @CMAKE_CXX_COMPILER_VERSION@"
+#define BACKEND_C_COMPILER "@CMAKE_C_COMPILER_ID@ @CMAKE_C_COMPILER_VERSION@"
+#define BACKEND_SYSTEM "@CMAKE_SYSTEM@"
+#define BACKEND_SYSTEM_PROCESSOR "@CMAKE_SYSTEM_PROCESSOR@"
+#define BACKEND_GIT_REVISION "@BACKEND_GIT_REVISION@"
 
-#include <build_version.hxx>
