✨ enable snappy compression
Change-Id: Ia14bd26c43a2fcad50c1275c3e93bf23a8621734
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/129124
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "ext/third_party/asio"]
 	path = ext/third_party/asio
 	url = git://github.com/chriskohlhoff/asio.git
+[submodule "ext/third_party/snappy"]
+	path = ext/third_party/snappy
+	url = git://github.com/google/snappy.git
