--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 add_subdirectory(third_party/gsl)
 add_subdirectory(third_party/json)
 add_subdirectory(third_party/spdlog)
+add_subdirectory(third_party/snappy)
 
 include_directories(BEFORE SYSTEM third_party/gsl/include)
 include_directories(BEFORE SYSTEM third_party/asio/asio/include)
@@ -118,11 +119,15 @@ message(STATUS "RUBY_LIBRARY: ${RUBY_LIBRARY}")
 include_directories(BEFORE SYSTEM "${RUBY_INCLUDE_DIR}")
 
 find_program(GIT git)
-if (GIT)
-    execute_process(COMMAND git rev-parse HEAD WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE BACKEND_GIT_REVISION)
+if(GIT)
+    execute_process(
+        COMMAND git rev-parse HEAD
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+        OUTPUT_STRIP_TRAILING_WHITESPACE
+        OUTPUT_VARIABLE BACKEND_GIT_REVISION)
 endif()
 
-STRING(TIMESTAMP BACKEND_BUILD_TIMESTAMP "%Y-%m-%d %H:%M:%S" UTC)
+string(TIMESTAMP BACKEND_BUILD_TIMESTAMP "%Y-%m-%d %H:%M:%S" UTC)
 configure_file(${PROJECT_SOURCE_DIR}/build_version.hxx.in ${PROJECT_BINARY_DIR}/generated/build_version.hxx @ONLY)
 add_library(couchbase SHARED couchbase/couchbase.cxx)
 target_include_directories(couchbase PRIVATE ${PROJECT_BINARY_DIR}/generated)
@@ -136,8 +141,9 @@ target_link_libraries(
             cbcrypto
             cbsasl
             http_parser
+            snappy
             spdlog::spdlog_header_only)
-set_target_properties(cbcrypto cbsasl platform PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
+set_target_properties(cbcrypto cbsasl platform snappy PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 if(APPLE)
     target_link_options(couchbase PRIVATE -Wl,-undefined,dynamic_lookup)
