✨ implement query manager
Change-Id: I9820174b031d1924ede6df1f44c641b1a3fae5da
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/129294
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/build_version.hxx.in
+++ b/ext/build_version.hxx.in
@@ -22,5 +22,5 @@
 #define BACKEND_C_COMPILER "@CMAKE_C_COMPILER_ID@ @CMAKE_C_COMPILER_VERSION@"
 #define BACKEND_SYSTEM "@CMAKE_SYSTEM@"
 #define BACKEND_SYSTEM_PROCESSOR "@CMAKE_SYSTEM_PROCESSOR@"
-#define BACKEND_GIT_REVISION "@BACKEND_GIT_REVISION@"
+#define BACKEND_GIT_REVISION "8dca526bb1bb12bc1f9ec20d4a8a0bd33f912995"
 
