--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,5 +40,8 @@ jobs:
       - name: Compile extension
         run: bundle exec rake compile
 
+      - name: Display library version
+        run: bundle exec ruby -r couchbase -e 'pp Couchbase::VERSION'
+
       - name: Run tests
         run: bundle exec rake test
