--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
         run: bundle exec rake compile
 
       - name: Display library version
-        run: bundle exec ruby -r couchbase -e 'pp Couchbase::VERSION'
+        run: bundle exec ruby -I lib -r couchbase -e 'pp Couchbase::VERSION'
 
       - name: Run tests
         run: bundle exec rake test
