🔧 add repository with test data
Change-Id: I33a6702c79bbeefa65f2746b53b69da1db2c8173
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/129697
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "ext/third_party/snappy"]
 	path = ext/third_party/snappy
 	url = git://github.com/google/snappy.git
+[submodule "test_data/sdk_test_cases"]
+	path = test_data/sdk_test_cases
+	url = git://github.com/couchbaselabs/sdk-testcases
