🔧 check cluster before running tests
Change-Id: I6d3791e3a2e83a633fe99fbe7ce3633d1238150d
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/130762
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.github/workflows/tests-6.0.3.yml
+++ b/.github/workflows/tests-6.0.3.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Display library version
         run: bundle exec ruby -I lib -r couchbase -e 'pp Couchbase::VERSION'
 
+      - name: Check couchbase
+        run: ./bin/check-cluster
+
       - name: Run tests
         run: bundle exec rake test
         env:
