🔧 configure timeouts for github actions
Change-Id: I9fa9bad098230e37978de9bf97e7c132b4c0c13e
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/131671
Tested-by: Sergey Avseyev <sergey.avseyev@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.github/workflows/tests-6.0.3.yml
+++ b/.github/workflows/tests-6.0.3.yml
@@ -47,6 +47,7 @@ jobs:
         run: ./bin/check-cluster
 
       - name: Run tests
+        timeout-minutes: 15
         run: bundle exec rake test
         env:
           TEST_SERVER_VERSION: 6.0.3
