--- a/.github/workflows/tests-dev-preview.yml
+++ b/.github/workflows/tests-dev-preview.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
 
     services:
@@ -49,6 +48,7 @@ jobs:
         run: ./bin/check-cluster
 
       - name: Run tests
+        timeout-minutes: 15
         run: bundle exec rake test
         env:
           DEVELOPER_PREVIEW: yes
