--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
 
     services:
@@ -47,4 +46,5 @@ jobs:
         run: ./bin/check-cluster
 
       - name: Run tests
+        timeout-minutes: 15
         run: bundle exec rake test
