🔧 configure coredump report
Change-Id: Idcd6d8160b8eb322efab85fe7379098f89e9c7a4
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/132053
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,8 +18,12 @@ jobs:
           - 11210:11210
 
     steps:
+      - name: Configure core dump capturing
+        run: |
+          echo '/tmp/core.%h.%e.%t' | sudo tee /proc/sys/kernel/core_pattern
+
       - name: Install build environment
-        run: sudo apt-get install -y libssl-dev cmake gcc g++ curl
+        run: sudo apt-get install -y libssl-dev cmake gcc g++ curl gdb
 
       - uses: actions/checkout@v2
         with:
@@ -47,4 +51,19 @@ jobs:
 
       - name: Run tests
         timeout-minutes: 15
-        run: bundle exec rake test
+        run: |
+          ulimit -c unlimited
+          bundle exec rake test
+
+      - name: Display core dumps
+        if: ${{ failure() }}
+        run: |
+          for i in /tmp/core*
+          do
+             if [ -f $i ]
+             then
+               echo $i
+               file $i
+               gdb $(bundle exec which ruby) $i --batch -ex "thread apply all bt"
+             fi
+          done
