--- a/.github/workflows/tests-dev-preview.yml
+++ b/.github/workflows/tests-dev-preview.yml
@@ -18,8 +18,12 @@ jobs:
           - 11210:11210
 
     steps:
+      - name: Configure core dump capturing
+        run: |
+          echo '/tmp/core.%h.%e.%t' | sudo tee /proc/sys/kernel/core_pattern
+
       - name: Install build environment
-        run: sudo apt-get install -y libssl-dev cmake gcc g++ curl
+        run: sudo apt-get install -y libssl-dev cmake gcc g++ curl gdb
 
       - uses: actions/checkout@v2
         with:
@@ -49,7 +53,22 @@ jobs:
 
       - name: Run tests
         timeout-minutes: 15
-        run: bundle exec rake test
+        run: |
+          ulimit -c unlimited
+          bundle exec rake test
         env:
           DEVELOPER_PREVIEW: yes
           TEST_SERVER_VERSION: 6.5.1
+
+      - name: Display core dumps
+        if: ${{ failure() }}
+        run: |
+          for i in /tmp/core*
+          do
+             if [ -f $i ]
+             then
+               echo $i
+               file $i
+               gdb $(bundle exec which ruby) $i --batch -ex "thread apply all bt"
+             fi
+          done
