🐛 fix retrying commands on errors/disconnection
Change-Id: I5c1e469ba522b01b5f3704cf5d4e307622e2e8ff
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/135462
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -201,3 +201,27 @@ Minitest/TestMethodName:
 
 Minitest/UnspecifiedException:
   Enabled: true
+
+Lint/DuplicateRequire:
+  Enabled: true
+
+Lint/EmptyFile:
+  Enabled: true
+
+Lint/TrailingCommaInAttributeDeclaration:
+  Enabled: true
+
+Lint/UselessMethodDefinition:
+  Enabled: true
+
+Style/CombinableLoops:
+  Enabled: true
+
+Style/KeywordParametersOrder:
+  Enabled: true
+
+Style/RedundantSelfAssignment:
+  Enabled: true
+
+Style/SoleNestedConditional:
+  Enabled: true
