✨ RCBC-271: enhance user management for collections
Change-Id: Ib8103c558deb328405e6bf43dd18e691dcc09f09
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/136229
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -166,6 +166,9 @@ Performance/Squeeze:
 Performance/StringInclude:
   Enabled: true
 
+Performance/Sum:
+  Enabled: true
+
 Minitest/AssertInDelta:
   Enabled: true
 
