✅ infrastructure to write tests without ruby runtime
Change-Id: I8f33603854c7c4b4ea7a21b2d0b10498128a9efb
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/136969
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "test_data/sdk_test_cases"]
 	path = test_data/sdk_test_cases
 	url = git://github.com/couchbaselabs/sdk-testcases
+[submodule "ext/third_party/catch2"]
+	path = ext/third_party/catch2
+	url = git://github.com/catchorg/Catch2.git
