🔧 record more info during the build
Change-Id: I1e7f9a16923c8d4396f3db9e389a6879778790dd
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/137135
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/build_version.hxx.in
+++ b/ext/build_version.hxx.in
@@ -23,4 +23,5 @@
 #define BACKEND_SYSTEM "@CMAKE_SYSTEM@"
 #define BACKEND_SYSTEM_PROCESSOR "@CMAKE_SYSTEM_PROCESSOR@"
 #define BACKEND_GIT_REVISION "@BACKEND_GIT_REVISION@"
+#cmakedefine STATIC_STDLIB 1
 
