--- a/ext/.cmake-format.yaml
+++ b/ext/.cmake-format.yaml
@@ -5,4 +5,5 @@ line_ending: unix
 line_width: 120
 separate_ctrl_name_with_space: false
 separate_fn_name_with_space: false
-tab_size: 4
+tab_size: 2
+max_pargs_hwrap: 3
