👷 use gcc9 on jenkins to build the extension
Change-Id: Icdef4dcfcf89807f1c27ecf599325364c42f1c1c
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/137324
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -45,9 +45,13 @@ if(STATIC_OPENSSL)
   set(OPENSSL_USE_STATIC_LIBS ON)
 endif()
 include(FindOpenSSL)
-message(STATUS "OPENSSL_VERSION: ${OPENSSL_VERSION}")
-message(STATUS "OPENSSL_INCLUDEDIRS: ${OPENSSL_INCLUDE_DIR}")
-message(STATUS "OPENSSL_LIBRARIES: ${OPENSSL_LIBRARIES}")
+if(OPENSSL_LIBRARIES AND OPENSSL_INCLUDE_DIR)
+  message(STATUS "OPENSSL_VERSION: ${OPENSSL_VERSION}")
+  message(STATUS "OPENSSL_INCLUDE_DIR: ${OPENSSL_INCLUDE_DIR}")
+  message(STATUS "OPENSSL_LIBRARIES: ${OPENSSL_LIBRARIES}")
+else()
+  message(FATAL_ERROR "Cannot build couchbase extension without OpenSSL")
+endif()
 
 include(cmake/VersionInfo.cmake)
 
