--- a/ext/build_version.hxx.in
+++ b/ext/build_version.hxx.in
@@ -24,4 +24,4 @@
 #define BACKEND_SYSTEM_PROCESSOR "@CMAKE_SYSTEM_PROCESSOR@"
 #define BACKEND_GIT_REVISION "@BACKEND_GIT_REVISION@"
 #cmakedefine STATIC_STDLIB 1
-
+#cmakedefine STATIC_OPENSSL 1
