--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ inherit_from: .rubocop_todo.yml
 require:
   - rubocop-performance
   - rubocop-minitest
+  - rubocop-rake
 
 AllCops:
   TargetRubyVersion: 2.5
