🔧 add more rubocop extensions
Change-Id: Ie06407a44530767fdab3dc0804866f0a6d6d059e
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/137773
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,10 @@
 inherit_from: .rubocop_todo.yml
 require:
-  - rubocop-performance
   - rubocop-minitest
+  - rubocop-packaging
+  - rubocop-performance
   - rubocop-rake
+  - rubocop-thread_safety
 
 AllCops:
   TargetRubyVersion: 2.5
