--- a/ext/build_version.hxx.in
+++ b/ext/build_version.hxx.in
@@ -17,11 +17,11 @@
 
 #pragma once
 
-#define BACKEND_BUILD_TIMESTAMP "@BACKEND_BUILD_TIMESTAMP@"
-#define BACKEND_CXX_COMPILER "@CMAKE_CXX_COMPILER_ID@ @CMAKE_CXX_COMPILER_VERSION@"
-#define BACKEND_C_COMPILER "@CMAKE_C_COMPILER_ID@ @CMAKE_C_COMPILER_VERSION@"
-#define BACKEND_SYSTEM "@CMAKE_SYSTEM@"
-#define BACKEND_SYSTEM_PROCESSOR "@CMAKE_SYSTEM_PROCESSOR@"
-#define BACKEND_GIT_REVISION "@BACKEND_GIT_REVISION@"
+constexpr auto BACKEND_BUILD_TIMESTAMP = "@BACKEND_BUILD_TIMESTAMP@";
+constexpr auto BACKEND_CXX_COMPILER = "@CMAKE_CXX_COMPILER_ID@ @CMAKE_CXX_COMPILER_VERSION@";
+constexpr auto BACKEND_C_COMPILER = "@CMAKE_C_COMPILER_ID@ @CMAKE_C_COMPILER_VERSION@";
+constexpr auto BACKEND_SYSTEM = "@CMAKE_SYSTEM@";
+constexpr auto BACKEND_SYSTEM_PROCESSOR = "@CMAKE_SYSTEM_PROCESSOR@";
+constexpr auto BACKEND_GIT_REVISION = "@BACKEND_GIT_REVISION@";
 #cmakedefine STATIC_STDLIB 1
 #cmakedefine STATIC_OPENSSL 1
