add docstrings for several classes
Change-Id: I75aaad2815dfbcc969fe1adddf702225eb9b06cd
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/139547
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -246,3 +246,24 @@ Style/RedundantSelfAssignment:
 
 Style/SoleNestedConditional:
   Enabled: true
+
+Lint/DuplicateRegexpCharacterClassElement:
+  Enabled: true
+
+Lint/EmptyBlock:
+  Enabled: true
+
+Lint/ToEnumArguments:
+  Enabled: true
+
+Lint/UnmodifiedReduceAccumulator:
+  Enabled: true
+
+Style/ArgumentsForwarding:
+  Enabled: true
+
+Style/DocumentDynamicEvalDefinition:
+  Enabled: true
+
+Style/SwapValues:
+  Enabled: true
