add more examples for query and subdoc
Change-Id: Idc62e3d6c340f12177846969e59e2c85ba05a614
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/139644
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -267,3 +267,12 @@ Style/DocumentDynamicEvalDefinition:
 
 Style/SwapValues:
   Enabled: true
+
+Lint/NoReturnInBeginEndBlocks:
+  Enabled: true
+
+Style/CollectionCompact:
+  Enabled: true
+
+Style/NegatedIfElseCondition:
+  Enabled: true
