fix compiler warnings from windows builder
Change-Id: I2b04579c013df510a57fbdcb17053f6e7760b330
Reviewed-on: http://review.couchbase.org/c/couchbase-ruby-client/+/140654
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://github.com/microsoft/gsl.git
 [submodule "ext/third_party/json"]
 	path = ext/third_party/json
-	url = git://github.com/taocpp/json.git
+	url = git://github.com/avsej/json.git
 [submodule "ext/third_party/spdlog"]
 	path = ext/third_party/spdlog
 	url = git://github.com/gabime/spdlog.git
