--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,11 @@ require:
 AllCops:
   TargetRubyVersion: 2.5
   NewCops: enable
+  Exclude:
+    - 'vendor/**/*'
+    # Copied from Rails v6.1.0-38-gbf165e3e19
+    - 'test/active_support/behaviors/*.rb'
+    - 'test/active_support/behaviors.rb'
 
 Metrics/ParameterLists:
   Max: 30
